@@ -29,6 +29,8 @@ Changed
 ~~~~~~~
 
 - The `fonts.web.*` settings now support URL patterns.
+- The `:greasemonkey-reload` command now shows a list of loaded scripts and has
+  a new `--quiet` switch to suppress that message.
 
 [[v2.2.3]]
 v2.2.3 (2021-06-01)
